RESOLVED FIXED17013
JSC can't round trip certain for-loops
https://bugs.webkit.org/show_bug.cgi?id=17013
Summary JSC can't round trip certain for-loops
Oliver Hunt
Reported 2008-01-25 19:13:53 PST
Given the code function f(){ for (var x;;) ; } f.toString() produces: function f(){ var x; for (var true;true;true) ; } in which "Var true" is invalid. Found by JSFunFuzz
Attachments
patch (5.99 KB, patch)
2008-01-25 22:35 PST, Darin Adler
oliver: review+
Darin Adler
Comment 1 2008-01-25 22:35:11 PST
Oliver Hunt
Comment 2 2008-01-26 00:20:07 PST
Comment on attachment 18698 [details] patch I wasgoing to suggest making additions to fast/js/function-toString-parentheses.js But your choice seems much better r=me
Darin Adler
Comment 3 2008-01-26 01:03:23 PST
Committed revision 29804.
Note You need to log in before you can comment on or make changes to this bug.